# kommtheuteaktenzeichen

./: .editorconfig  .gitattributes  .gitignore  .pylintrc  Pipfile  README.md  app.py  mypy.ini  pyproject.toml  setup.py  zappa_settings.json
.github/workflows/: do-not-merge.yml
etc/: aws.restricted-policy.dev.json  aws.restricted-policy.prod.json  aws.selfadmin-policy.json  events.kha.json
kha/: __init__.py  __main__.py  api.py  cli.py  episode.py  episode_check_response.py  episode_diff.py  fire_workarounds.py  format.py  local_types.py  parse.py  scraper.py  settings.py  verdict.py
kha/episode_patchers/: episode_adder.py  episode_diff.py  episode_replacer.py  noop_patcher.py  patcher.py
kha/formatters/: episode_check_response_formatter.py  episode_present_response_formatter.py  episode_unknown_response_formatter.py
kha/static/: datenschutz.html  default.css  impressum.html
kha/templates/: main.template.html  seo_structured_answer.template.html  short_explanation.template.html
scripts/: __init__.py  s3.py  scraper.py
share/: aws.deployment-policy.prod.json  aws.restricted-policy.dev.json  aws.restricted-policy.prod.json  events.kha.schema.json
src/kha/: __main__.py  api.py  episode.py  episode_check_response.py  local_types.py  parse.py  settings.py  setup.py
tests/: conftest.py  test_api.py  test_api_with_spinoff.py  test_episode.py  test_episode_diff.py  test_scraper.py
tests/kha/: test_api.py  test_episode.py
