[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "kha"
version = "0.1.0"
description = "Kommt heute Aktenzeichen?"
authors = [
    "Anna Pellegrino <hallo@annapellegrino.de>",
    "Claudia Pellegrino <clau@tiqua.de>",
]
license = "Apache-2.0"

[tool.poetry.dependencies]
# We’re pinning Python to an exact minor version for compatibility.
# Caution: always keep the major and minor number part in sync with
# the `runtime` property in `zappa_settings.json`.
python = "~3.9.0"

boto3 = "~=1.26"
colorama = "*"
fire = "*"
Flask = "~=2.0"
MarkupSafe = "~=2.0"
python-dateutil = "*"
requests = "~=2.28"

[tool.poetry.dev-dependencies]
autopep8 = "*"
boto3-stubs = { version = "*", extras = ["s3"] }
mypy = "~=0.990"
poethepoet = "~=0.16"
pylint = "~=2.15"
pytest = "*"
types-colorama = "*"
types-python-dateutil = "*"
types-requests = "*"
zappa = "~=0.55.0"

[tool.poe]
verbosity = -1

[tool.poe.tasks]
tasks.cmd = "poe -v"
tasks.help = "List available tasks"
cli.script = "kha.cli:run"
cli.env = { AWS_PROFILE = "kha-restricted", KHA_DATA_S3_BUCKET = "kha-store-dev" }
cli.help = "Run the command line interface"
deploy.cmd = "zappa deploy prod"
deploy.help = "Initially deploy to kommtheuteaktenzeichen.de"
linter.cmd = "pylint --enable-all-extensions kha tests"
linter.help = "Check for style violations"
scraper.script = "scripts.scraper:run"
scraper.help = "Scrape from web interface"
server.cmd = "flask run"
server.env = { AWS_PROFILE = "kha-restricted", KHA_DATA_S3_BUCKET = "kha-store-dev" }
server.help = "Run local server"
tail.cmd = "zappa tail prod"
tail.help = "Show (tail) production logs"
tests.cmd = "pytest"
tests.help = "Run test suite"
typecheck.cmd = "mypy"
typecheck.help = "Run static type checker"
update.cmd = "zappa update prod"
update.help = "Deploy to (and replace) kommtheuteaktenzeichen.de"

[tool.poe.tasks.upload-events]
script = "scripts.s3:upload_events"
help = "Upload file to S3 bucket (will overwrite `events.kha.json`)"

[[tool.poe.tasks.upload-events.args]]
name = "source_json"
options = ["-f", "--file"]
help = "File to upload"
default = "etc/events.kha.json"

[[tool.poe.tasks.upload-events.args]]
name = "target_bucket"
options = ["-t", "--to-bucket"]
help = "Name of the S3 bucket to receive the file"
default = "kha-store-dev"

[[tool.poe.tasks.upload-events.args]]
name = "profile_name"
options = ["-p", "--profile"]
help = "Name of the AWS profile to use"
default = "kha-restricted"
